kubernetes/apps/apps/tunnel/tachi/tachi/access/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app tachi-access
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: network-forward-auth@kubernetescrd
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host tachi.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tachi-service
                port:
                  number: 4567
    - host: &host tachi.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tachi-service
                port:
                  number: 4567
  tls:
  - hosts:
      - tachi.icylair.com
      - tachi.cloud.icylair.com
    secretName: icylair-com-all-prod
